# GidPublish

./: .editorconfig  .gitignore  MANIFEST.in  README.md  f.hpp  pyproject.toml
gidpublish/: __init__.py  __main__.py  project_meta_data.env
gidpublish/abstracts/: abstract_workjob_interface.py
gidpublish/arma_tools/: functions_hpp_handling.py
gidpublish/arma_tools/templates/: functions.hpp.jinja
gidpublish/data/: general_exclusions.py
gidpublish/dependencies_tool/: __init__.py  dependency_finder_class.py  dependency_freezer_class.py  scripts.py
gidpublish/engine/: gidpublish_builder.py  stored_tool_item.py
gidpublish/extensions/: __init__.py
gidpublish/external_tool_wrapper/: cli_tool_runner.py  found_executable_shelve.bak  scripts.py
gidpublish/external_tool_wrapper/help_texts/: autoflake_help.md  autopep8_help.md  dotenv_help.md  gprof2dot_help.md  isort_help.md  pip_upgrade_outdated_help.md  prospector_help.md  py2clean_help.md  py3clean_help.md  pyclean_help.md  pylint_help.md  pylupdate5_help.md  pypyclean_help.md  pyrcc5_help.md  pyreverse_help.md  pyuic5_help.md  radon_help.md  symilar_help.md  vprof_help.md
gidpublish/formating_tools/: imports_cleaner.py
gidpublish/make_readme_tool/: build_markdown.py  format_items_markdown.py
gidpublish/make_readme_tool/markdown_parts/advanced/: check.md  dropdown.py
gidpublish/make_readme_tool/markdown_parts/basic/: base_parts.py  block_formatting.py  simple_string_formatting.py
gidpublish/make_readme_tool/markdown_parts/support/: available_syntax_highlighting.py
gidpublish/make_readme_tool/markdown_parts/support/syntax_highlighting_data/: last_updated.pkl  syntax_highlighting_languages.pkl
gidpublish/template_handling/: convert_readme_instructions.py  template_interface.py
gidpublish/templates/: as_arma_functions.hpp.jinja  gm_dropdown_basic.html.jinja  gm_dropdown_describe.html.jinja
gidpublish/utility/: enums.py  exceptions.py  file_system_walk.py  general_decorators.py  gidcmd_functions.py  gidtools_functions.py  misc.py  misc_functions.py  named_tuples.py
gidpublish/version_tools/: version_handling.py
tests/: example_readme.instruction  functions.hpp
tests/ama_tools_test/: conftest.py  test_functions_hpp_handling.py
tests/dependency_tool_tests/: conftest.py  test_dependency_finder.py  test_dependency_freezer.py
tests/dependency_tool_tests/fake_package/: fake_pyproject.toml
tests/fake_package/: fake_readme.md  fake_setup.py
tests/version_tools_test/: conftest.py  test_version_manager.py
tools/: autoflake_help.md  clean_workspace.py  create_venv.cmd  create_venv_extra_envvars.py  log_pipe_create_venv.cmd  open_coverage.cmd  prepare_venv_settings.py  pytest_run_coverage.cmd
tools/venv_setup_settings/: required_dev.txt  required_experimental.txt  required_misc.txt  required_personal_packages.txt  required_qt.txt  required_test.txt
