[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "gidpublish"
author = "BrocaProgs"
home-page = "https://github.com/Giddius/GidPublish"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"

requires = []



[tool.flit.scripts]

