[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<4"]

[tool.flit.metadata]
author = "BrocaProgs"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
home-page = "https://github.com/Giddius/GidPublish"
module = "gidpublish"
requires = []

[tool.flit.sdist]
exclude = []

[tool.flit.scripts]

[tool.pytest.ini_options]
addopts = "-rP -vv --durations=0 --show-capture=all --color=auto --code-highlight=yes"

[tool.gidvenv.base_venv_settings]
clear = true
symlinks = true
system_site_packages = false
with_pip = false
# prompt=
upgrade_deps = false

[tool.gidvenv.settings]
extra_install_instructions = []
manipulate_script = true
pyclean_before = true
verbose = false

[tool.autopep8]
ignore = ["E402", "E501"]
max_line_length = 250

[tool.isort]
balanced_wrapping = true
ensure_newline_before_comments = true
group_by_package = true
import_heading_firstparty = "* Local Imports --------------------------------------------------------------------------------------->"
import_heading_gid = "* Gid Imports ----------------------------------------------------------------------------------------->"
import_heading_pyqt = "* PyQt5 Imports --------------------------------------------------------------------------------------->"
import_heading_stdlib = "* Standard Library Imports ---------------------------------------------------------------------------->"
import_heading_thirdparty = "* Third Party Imports --------------------------------------------------------------------------------->"
known_gid = ["gidtools", "gidlogger", "gidqtutils", "gidviewmodels"]
known_pyqt = ["PyQt5"]
length_sort = true
line_length = 200
lines_after_imports = 1
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "PYQT",
    "GID",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
